# nes-platformer-template

./: .ccls  .gitignore  .luarc.json  CMakeLists.txt  LICENSE  Makefile  README.md  fceux-debug.lua  requirements.txt
assets/: Makefile  README.md
assets/data/: object_types.csv  trigger.csv  zones.csv
assets/levels/: levels.lvl
assets/levels/example/: first.tmx  second.tmx
assets/sound/: music.fms  sfx.fms
assets/tilesets/: example.tsx  objects.tsx
cmake/: CMakeASM_CC65Information.cmake  CMakeASM_CC65LinkerInformation.cmake  CMakeDetermineASM_CC65Compiler.cmake
cmake/Compiler/: CC65-C.cmake  CC65.cmake
config/: a53.cfg  mmc1.cfg  unrom.cfg
source/: CMakeLists.txt  README.md  button.s  level.c  main.c  megatile.s  object.c  player.c  ppu.c  trigger.c  variables.c  zeropage.s
source/debug/: CMakeLists.txt  README.md  assert.c  debug.s
source/gfx/: CMakeLists.txt  README.md  example.c  general.c  graphics.c
source/include/: assert.h  draw.h  game.h  gfx.h  gfxdata.h  level.h  object.h  palettes.h  player.h  ppu.h  sfx.h  sprites.h  trigger.h  types.h  var_defines.h
source/include/charmap/: string.h
source/include/lib/: nes.h  oam.h  sound.h
source/objects/: CMakeLists.txt  README.md  enemy.c  npc.c
source/objects/util/: CMakeLists.txt  camera.s  collide.c  draw.c  movement.c  obj_state.s  spawn.c
source/platform/: CMakeLists.txt  README.md  bank.s  donut.s  rand.s  sleep.s  util.s
source/platform/mapper/: a53.s  mmc1.s  mmc3.s  unrom.s
source/platform/nes/: CMakeLists.txt  crt0.s  gamepad.s  nesdef.inc  palette.s  ppu.s  rle.s  scroll.s  split.s  sprite.s  vram.s
source/platform/util/: CMakeLists.txt  call.s  decsp3.s  popa.s  pusha.s
source/sound/: CMakeLists.txt  README.md  famistudio_ca65.s  music.s  sfx.s  sound.s
tools/: csv2h.py  img2chr.py  labeltonl.py  lvl2h.py  nes_stats.py  tmx2h.py  tsx2metatile.py
tools/util/: compress.py  level.py  rle.py  tmx.py
